remove stateful from button

--- a/force-app/main/default/lwc/crmStoMessagingToolbar/crmStoMessagingToolbar.html
+++ b/force-app/main/default/lwc/crmStoMessagingToolbar/crmStoMessagingToolbar.html
@@ -7,11 +7,11 @@
         onclick={startTransferFlow}
     >
     </lightning-button-icon-stateful> -->
-    <lightning-button-icon-stateful
+    <lightning-button-icon
         slot="toolbar"
         icon-name="utility:archive"
         alternative-text="Journalfør"
         onclick={startJournalFlow}
     >
-    </lightning-button-icon-stateful>
+    </lightning-button-icon>
 </template>
