--- a/force-app/main/default/lwc/communityModal/communityModal.html
+++ b/force-app/main/default/lwc/communityModal/communityModal.html
@@ -1,10 +1,6 @@
 <template>
     <div if:true={showModal} class="modal__overlay">
-        <div class="modal modalpadding" aria-modal="true">
-            <slot name="modalHeader"></slot>
-            <slot name="modalContent"></slot>
-            <hr class="blokk-m" />
-            <slot name="modalFooter"></slot>
+        <div class="modal modalpadding" role="dialog" aria-modal="true" tabindex="0">
             <button
                 class="lukknapp lukknapp-positioning modal__lukkknapp--shake"
                 aria-label="Lukk"
@@ -12,6 +8,10 @@
             >
                 <span class="text-hide">Lukk</span>
             </button>
+            <slot name="modalHeader"></slot>
+            <slot name="modalContent"></slot>
+            <hr class="blokk-m" />
+            <slot name="modalFooter"></slot>
         </div>
     </div>
 </template>
