--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -47,11 +47,7 @@
                             onmodalclosed={closeTerms}
                             onkeyup={handleKeyboardEvent}
                         >
-                            <h1
-                                slot="modalHeader"
-                                tabindex="0"
-                                class="slds-var-m-top_x-large typo-sidetittel text-center blokk-l"
-                            >
+                            <h1 slot="modalHeader" class="slds-var-m-top_x-large typo-sidetittel text-center blokk-l">
                                 {label.SERVICE_TERMS_HEADER}
                             </h1>
                             <div slot="modalContent">
