--- a/force-app/main/default/lwc/communityModal/communityModal.html
+++ b/force-app/main/default/lwc/communityModal/communityModal.html
@@ -1,8 +1,8 @@
 <template>
     <div if:true={showModal} class="modal__overlay">
-        <div class="modal modalpadding" role="dialog" aria-modal="true" tabindex="0">
+        <div class="modal modalpadding" role="dialog" aria-modal="true" tabindex="-1">
             <button
-                class="lukknapp lukknapp-positioning modal__lukkknapp--shake"
+                class="lukknapp lukknapp-positioning modal__lukkknapp--shake modalFocus"
                 aria-label="Lukk"
                 onclick={closeModal}
             >
