upd inbox titles

--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -15,7 +15,7 @@
                                 year="numeric"
                             ></lightning-formatted-date-time> - <span class={statuscolor}> {thread.status} </span>
                         </p>
-                        <h3 class="typo-undertittel lenkepanel__heading ">{thread.name}<span class="vekk"></span></h3>
+                        <h3 class="typo-undertittel lenkepanel__heading ">{itemTitle}<span class="vekk"></span></h3>
                         <p class="typo-normal tema-avsnitt slds-truncate">{latestText}</p>
                     </lightning-layout-item>
                     <lightning-layout-item size="1">
