remove html tag in messages

--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -16,7 +16,7 @@
                             ></lightning-formatted-date-time> - <span class={statuscolor}> {thread.status} </span>
                         </p>
                         <h3 class="typo-undertittel lenkepanel__heading ">{itemTitle}<span class="vekk"></span></h3>
-                        <p class="typo-normal tema-avsnitt slds-truncate"><lightning-formatted-rich-text value={latestText}></lightning-formatted-rich-text></p>
+                        <p class="typo-normal tema-avsnitt slds-truncate">{latestText}</p>
                     </lightning-layout-item>
                     <lightning-layout-item size="1">
                         <span class="nav-frontend-chevron chevronboks chevron chevron--hoyre lenkepanel__indikator"></span>
