add flexi trunc

--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -2,7 +2,7 @@
     <div>
         <a class={className} href={linkUrl} key={thread.recordId} id="a">
             <span class="typo-undertittel ">
-                <lightning-layout vertical-align="center">
+                <lightning-layout vertical-align="center" class="slds-has-flexi-truncate">
                     <lightning-layout-item size="1" padding="around-medium">
                         <img class="iconcolor" src={dialog} alt={unreadmessage} id="b"/>
                     </lightning-layout-item>
