--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -1,28 +1,24 @@
 <template>
-    <div>
         <a class={className} href={linkUrl} key={thread.recordId} id="a">
-            <div>
-                <lightning-layout vertical-align="center">
+                <lightning-layout vertical-align="center" class="slds-size_1-of-1 messagebox">
                     <lightning-layout-item size="1" padding="around-medium">
                         <img class="iconcolor" src={dialog} alt={unreadmessage} id="b"/>
                     </lightning-layout-item>
                     <lightning-layout-item size="10">
-                        <p class="typo-normal blokk-xxxs">
-                            <lightning-formatted-date-time
-                                value={thread.latestMessageDate}
-                                month="2-digit"
-                                day="2-digit"
-                                year="numeric"
-                            ></lightning-formatted-date-time> - <span class={statuscolor}> {thread.status} </span>
-                        </p>
-                        <h3 class="typo-undertittel lenkepanel__heading ">{itemTitle}<span class="vekk"></span></h3>
-                        <p class="typo-normal tema-avsnitt slds-truncate">{latestText}</p>
+                                <p class="typo-normal blokk-xxxs">
+                                    <lightning-formatted-date-time
+                                        value={thread.latestMessageDate}
+                                        month="2-digit"
+                                        day="2-digit"
+                                        year="numeric"
+                                    ></lightning-formatted-date-time> - <span class={statuscolor}> {thread.status} </span>
+                                </p>
+                                <h3 class="typo-undertittel lenkepanel__heading ">{itemTitle}</h3>
+                                <p class="typo-normal tema-avsnitt slds-truncate">{latestText}</p>
                     </lightning-layout-item>
                     <lightning-layout-item size="1">
                         <span class="nav-frontend-chevron chevronboks chevron chevron--hoyre lenkepanel__indikator"></span>
                     </lightning-layout-item>
                 </lightning-layout>
-            </div>
         </a>
-    </div>
 </template>
