fix truncate with line-clam

--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -1,6 +1,6 @@
 <template>
         <a class={className} href={linkUrl} key={thread.recordId} id="a">
-                <lightning-layout vertical-align="center" class="slds-size_1-of-1 messagebox">
+                <lightning-layout vertical-align="center" class="slds-size_1-of-1">
                     <lightning-layout-item size="1" padding="around-medium">
                         <img class="iconcolor" src={dialog} alt={unreadmessage} id="b"/>
                     </lightning-layout-item>
@@ -14,7 +14,7 @@
                                     ></lightning-formatted-date-time> - <span class={statuscolor}> {thread.status} </span>
                                 </p>
                                 <h3 class="typo-undertittel lenkepanel__heading ">{itemTitle}</h3>
-                                <p class="typo-normal tema-avsnitt slds-truncate">{latestText}</p>
+                                <p class="typo-normal tema-avsnitt messagebox">{latestText}</p>
                     </lightning-layout-item>
                     <lightning-layout-item size="1">
                         <span class="nav-frontend-chevron chevronboks chevron chevron--hoyre lenkepanel__indikator"></span>
