Adds theme and date to related link

--- a/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
+++ b/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
@@ -17,6 +17,7 @@
             <template if:true={showRelatedNotes}>
                 <br />
                 <br />
+                <p>Dette er en veldig viktig setning som forteller deg alt du trenger å vite.</p>
                 <template for:each={relatedNotes} for:item="note">
                     <c-community-conversation-note-related-item
                         key={note}
