--- a/force-app/main/default/lwc/communityConversationNoteRelatedItem/communityConversationNoteRelatedItem.html
+++ b/force-app/main/default/lwc/communityConversationNoteRelatedItem/communityConversationNoteRelatedItem.html
@@ -1,8 +1,3 @@
 <template>
-    <lightning-formatted-url
-        value={url}
-        label="Klikk her for å se relaterte samtalereferat på samme sak"
-        class="slds-show"
-        >asd</lightning-formatted-url
-    >
+    <lightning-formatted-url value={url} label={label} class="slds-show"></lightning-formatted-url>
 </template>
