--- a/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
+++ b/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
@@ -15,15 +15,15 @@
             ></lightning-formatted-date-time>
             <lightning-formatted-rich-text value={note} class="linebreaks"></lightning-formatted-rich-text>
             <template if:true={showRelatedNotes}>
-                <br />
-                <br />
-                <p>Dette er en veldig viktig setning som forteller deg alt du trenger å vite.</p>
-                <template for:each={relatedNotes} for:item="note">
-                    <c-community-conversation-note-related-item
-                        key={note}
-                        note={note}
-                    ></c-community-conversation-note-related-item>
-                </template>
+                <div class="slds-border_top slds-var-m-top_xx-large slds-var-p-top_medium">
+                    <p>Dette er en veldig viktig setning som forteller deg alt du trenger å vite.</p>
+                    <template for:each={relatedNotes} for:item="note">
+                        <c-community-conversation-note-related-item
+                            key={note}
+                            note={note}
+                        ></c-community-conversation-note-related-item>
+                    </template>
+                </div>
             </template>
         </div>
     </div>
