--- a/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
+++ b/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
@@ -17,7 +17,7 @@
                 <lightning-formatted-rich-text value={note} class="linebreaks"></lightning-formatted-rich-text>
             </div>
             <template if:true={showRelatedNotes}>
-                <div class="slds-border_top grey-border big-gap">
+                <div class="slds-border_top grey-border big-gap slds-var-p-top_medium">
                     <p class="navds-body-short navds-body-short--small">
                         Dette er en veldig viktig setning som forteller deg alt du trenger å vite.
                     </p>
