Adds the correct text

--- a/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
+++ b/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
@@ -19,7 +19,7 @@
             <template if:true={showRelatedNotes}>
                 <div class="slds-border_top grey-border big-gap slds-var-p-top_medium">
                     <p class="navds-body-short navds-body-short--small">
-                        Dette er en veldig viktig setning som forteller deg alt du trenger å vite.
+                        Du har flere referater fra samtaler om denne henvendelsen:
                     </p>
                     <template for:each={relatedNotes} for:item="note">
                         <c-community-conversation-note-related-item
