--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -132,7 +132,7 @@
                     </div>
                     <div class="text-center">
                         <button
-                            class="navds-button navds-button--secondary navds-button--medium knapp-width"
+                            class="navds-button navds-button--secondary navds-button--medium knapp-width lastFocusElement"
                             type="submit"
                             aria-controls="betingelser"
                             role="button"
