Adds error handling for more than 1000 characters

--- a/force-app/main/default/lwc/communityTextarea/communityTextarea.html
+++ b/force-app/main/default/lwc/communityTextarea/communityTextarea.html
@@ -9,14 +9,11 @@
                 oninput={handleMessage}
                 label="Skriv din melding her"
                 class="navds-textarea__input navds-body-short navds-body-medium navds-textarea--counter tekstboks"
-                maxlength={maxLength}
                 onfocusout={checkError}
                 rows="6"
                 id="textareaInput"
             ></textarea>
-            <p aria-live="off" class="navds-textarea__counter navds-body-short remainingCounter">
-                Du har {remainingCharacters} tegn igjen
-            </p>
+            <p aria-live="off" class={remainingCharacterClass}>{remainingCharacterText}</p>
         </div>
         <div aria-relevant="additions removals" aria-live="polite">
             <template if:true={errorState}>
