--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -29,7 +29,7 @@
                                 ></c-community-expandable-panel>
                             </template>
                             <c-community-textarea
-                                max-length="1000"
+                                max-length={maxLength}
                                 class="inputTextbox"
                                 ontextchanged={handleTextChange}
                             ></c-community-textarea>
