Adds expandable feature to textbox

--- a/force-app/main/default/lwc/communityTextarea/communityTextarea.html
+++ b/force-app/main/default/lwc/communityTextarea/communityTextarea.html
@@ -13,6 +13,7 @@
                 rows="6"
                 id="textareaInput"
             ></textarea>
+            <div aria-hidden="true" class="mirror" tabindex="-1" rows="6"></div>
             <p aria-live="off" class={remainingCharacterClass}>{remainingCharacterText}</p>
         </div>
         <div aria-relevant="additions removals" aria-live="polite">
