Support conditional show hide close button on sto

--- a/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
+++ b/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
@@ -4,6 +4,7 @@
         single-thread={singleThread}
         card-title={cardTitle}
         text-template={textTemplate}
+        show-close={showClose}
     >
         <c-crm-sto-messaging-toolbar slot="toolbar" object-api-name={objectApiName}></c-crm-sto-messaging-toolbar>
     </c-crm-messaging-message-component>
