--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
@@ -4,7 +4,10 @@
             <h1 class="navds-heading navds-heading--2xlarge">{title}</h1>
         </div>
         <div class="header">
-            <c-nav-Button url="https://www.nav.no" title="Skriv ny melding"></c-nav-Button>
+            <c-nav-Button
+                url="https://www.nav.no/person/kontakt-oss/skriv-til-oss"
+                title="Skriv ny melding"
+            ></c-nav-Button>
         </div>
         <div class="decorator-wrapper">
             <div class="body">
