--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
@@ -14,9 +14,7 @@
                 <p class="navds-body-long navds-typo--spacing">
                     <strong>
                         For meldinger om dokumenter og/eller informasjonsbrev se&#32;
-                        <a href="https://mininnboks.nav.no/" class="lenke lenke-inline" target="_blank"
-                            >brev og vedtak</a
-                        >
+                        <a href="https://mininnboks.nav.no/" class="lenke lenke-inline">brev og vedtak</a>
                     </strong>
                 </p>
             </div>
