Specific handling for case

--- a/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
+++ b/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
@@ -1,6 +1,6 @@
 <template>
     <c-crm-messaging-message-component
-        record-id={recordId}
+        record-id={threadReference}
         single-thread={singleThread}
         card-title={cardTitle}
         text-template={textTemplate}
