changed key for conversationnote

--- a/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
+++ b/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
@@ -24,7 +24,7 @@
                     <br />
                     <template for:each={relatedNotes} for:item="note">
                         <c-community-conversation-note-related-item
-                            key={note}
+                            key={name}
                             note={note}
                         ></c-community-conversation-note-related-item>
                     </template>
