--- a/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
+++ b/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
@@ -5,15 +5,7 @@
         </div>
         <div class="panel-custom">
             <div class="big-gap">
-                <lightning-formatted-date-time
-                    value={date}
-                    year="numeric"
-                    day="numeric"
-                    month="long"
-                    hour="2-digit"
-                    minute="2-digit"
-                    class="inline-block thick"
-                ></lightning-formatted-date-time>
+                <c-crm-nav-formatted-date date={date} class="inline-block thick"></c-crm-nav-formatted-date>
                 <lightning-formatted-rich-text value={note} class="linebreaks"></lightning-formatted-rich-text>
             </div>
             <template if:true={showRelatedNotes}>
