Corrects changes made to error summary component

--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -9,8 +9,7 @@
                     <img aria-hidden="true" src={logopath} class="logo" />
                     <h2 class="typo-undertittel typo-undertittel_farge blokk-s">{selectedTheme}</h2>
                     <c-community-error-summary
-                        error-list={errors}
-                        show-warnings={showWarnings}
+                        error-list={errorList}
                         onclickedevent={handleErrorClick}
                         class="errorSummary"
                     >
