Adds warning for open thread of same category

--- a/force-app/main/default/lwc/communityExpandablePanel/communityExpandablePanel.html
+++ b/force-app/main/default/lwc/communityExpandablePanel/communityExpandablePanel.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="navds-accordion slds-p-bottom_large">
+    <div class="navds-accordion slds-var-m-bottom_large">
         <div class="navds-accordion__item">
             <button
                 onclick={togglevisible}
