--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -1,24 +1,36 @@
 <template>
-        <a class={className} href={linkUrl} key={thread.recordId} id="a">
-                <lightning-layout vertical-align="center" class="slds-size_1-of-1">
-                    <lightning-layout-item size="1" padding="around-medium">
-                        <img class="iconcolor" src={dialog} alt={unreadmessage} id="b"/>
-                    </lightning-layout-item>
-                    <lightning-layout-item size="10">
-                                <p class="typo-normal blokk-xxxs">
-                                    <lightning-formatted-date-time
-                                        value={thread.latestMessageDate}
-                                        month="2-digit"
-                                        day="2-digit"
-                                        year="numeric"
-                                    ></lightning-formatted-date-time> - <span class={statuscolor}> {thread.status} </span>
-                                </p>
-                                <h3 class="typo-undertittel lenkepanel__heading ">{itemTitle}</h3>
-                                <p class="typo-normal tema-avsnitt messagebox">{latestText}</p>
-                    </lightning-layout-item>
-                    <lightning-layout-item size="1">
-                        <span class="nav-frontend-chevron chevronboks chevron chevron--hoyre lenkepanel__indikator"></span>
-                    </lightning-layout-item>
-                </lightning-layout>
-        </a>
+    <a class={className} href={linkUrl} key={thread.recordId} id="a" style="padding: 1rem 1rem 1rem 0rem">
+        <lightning-layout vertical-align="center" class="slds-size_1-of-1">
+            <lightning-layout-item size="1" class="slds-is-relative">
+                <svg width="48px" height="48px" viewBox="0 0 48 48" class="centerCircle">
+                    <circle cx="24" cy="24" r="24" fill="#f7f7f7"></circle>
+                </svg>
+                <img
+                    class="iconcolor slds-is-relative slds-show"
+                    src={dialog}
+                    alt={unreadmessage}
+                    id="b"
+                    style="margin: auto"
+                />
+            </lightning-layout-item>
+            <lightning-layout-item size="10">
+                <p class="typo-normal blokk-xxxs">
+                    <lightning-formatted-date-time
+                        value={thread.latestMessageDate}
+                        month="2-digit"
+                        day="2-digit"
+                        year="numeric"
+                    ></lightning-formatted-date-time>
+                    <template if:true={showStatus}>
+                        &nbsp;- <span class={statuscolor}> {thread.status} </span>
+                    </template>
+                </p>
+                <h3 class="typo-undertittel lenkepanel__heading">{itemTitle}</h3>
+                <p class="typo-normal tema-avsnitt messagebox">{latestText}</p>
+            </lightning-layout-item>
+            <lightning-layout-item size="1">
+                <span class="nav-frontend-chevron chevronboks chevron chevron--hoyre lenkepanel__indikator"></span>
+            </lightning-layout-item>
+        </lightning-layout>
+    </a>
 </template>
