added groundwork for greating mesage toggle

--- a/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
+++ b/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
@@ -5,6 +5,8 @@
         card-title={cardTitle}
         text-template={textTemplate}
         show-close={showClose}
+        english-text-template={englishTextTemplate}
+        onenglisheventtwo={handleEnglishEventTwo}
     >
         <c-crm-sto-messaging-toolbar slot="toolbar" object-api-name={objectApiName}></c-crm-sto-messaging-toolbar>
     </c-crm-messaging-message-component>
