--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -29,41 +29,71 @@
                             </template>
                             <template if:true={showOpenThreadWarning}>
                                 <div class="slds-var-m-top_xx-large slds-text-align_left">
-                                    <c-crm-community-alert-stripe type="advarsel" alerttext={openThreadText}>
+                                    <c-crm-community-alert-stripe type={alertType} alerttext={openThreadText}>
                                     </c-crm-community-alert-stripe>
                                 </div>
                             </template>
-                            <div class="slds-var-m-top_xx-large">
-                                <c-community-textarea
-                                    max-length={maxLength}
-                                    class="inputTextbox"
-                                    ontextchanged={handleTextChange}
-                                ></c-community-textarea>
-                            </div>
-                            <div class="skjemaelement checkbox">
-                                <c-community-checkbox
-                                    label-text={label.acceptermtext}
-                                    oncheckedchanged={handleChecked}
-                                    class="checkboxContainer"
-                                ></c-community-checkbox
-                                ><button
-                                    onclick={showTerms}
-                                    class="slds-var-m-left_small lenke vilkar-link focusBtn"
-                                    tabindex="0"
-                                >
-                                    {label.showtermstext}
-                                </button>
-                            </div>
+                            <template if:true={showTextArea}>
+                                <div class="slds-var-m-top_xx-large">
+                                    <c-community-textarea
+                                        max-length={maxLength}
+                                        class="inputTextbox"
+                                        ontextchanged={handleTextChange}
+                                    ></c-community-textarea>
+                                </div>
+                                <div class="skjemaelement checkbox">
+                                    <c-community-checkbox
+                                        label-text={label.acceptermtext}
+                                        oncheckedchanged={handleChecked}
+                                        class="checkboxContainer"
+                                    ></c-community-checkbox
+                                    ><button
+                                        onclick={showTerms}
+                                        class="slds-var-m-left_small lenke vilkar-link focusBtn"
+                                        tabindex="0"
+                                    >
+                                        {label.showtermstext}
+                                    </button>
+                                </div>
 
-                            <button
-                                class="sendbutton navds-button navds-button--primary navds-button--medium"
-                                type="submit"
-                                style="padding: calc(0.475rem - 1px) 2.5rem calc(0.525rem - 1px) 2.5rem"
-                                aria-disabled="false"
-                                onclick={submitrequest}
-                            >
-                                Send
-                            </button>
+                                <button
+                                    class="sendbutton navds-button navds-button--primary navds-button--medium"
+                                    type="submit"
+                                    style="padding: calc(0.475rem - 1px) 2.5rem calc(0.525rem - 1px) 2.5rem"
+                                    aria-disabled="false"
+                                    onclick={submitrequest}
+                                >
+                                    Send
+                                </button>
+                            </template>
+                            <template if:false={showTextArea} for:each={openThreadList} for:item="thread">
+                                <div key={thread.recordId} style="display: flex; text-align: initial">
+                                    <c-sto-Message-Inbox-Item
+                                        style="flex-grow: 1"
+                                        class="override"
+                                        thread={thread}
+                                    ></c-sto-Message-Inbox-Item>
+                                    <button
+                                        class="lenkepanel"
+                                        onclick={shaggy}
+                                        data-id={thread.recordId}
+                                        type="button"
+                                        style="
+                                            padding-inline: 20px;
+                                            background: none;
+                                            border: none;
+                                            background: red;
+                                            border: 1px solid #8b0000;
+                                            margin-bottom: 3px;
+                                            display: flex;
+                                            border-bottom-left-radius: 0px;
+                                            border-top-left-radius: 0px;
+                                        "
+                                    >
+                                        <img src={deletepath} />
+                                    </button>
+                                </div>
+                            </template>
                         </template>
                         <template if:true={showspinner}>
                             <div tabindex="0" class="spinner" aria-label="Sender melding. Vennligst vent.">
