--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -1,19 +1,26 @@
 <template>
     <a class={className} href={linkUrl} key={thread.recordId} id="a" style="padding: 1rem 1rem 1rem 0rem">
         <lightning-layout vertical-align="center" class="slds-size_1-of-1">
-            <lightning-layout-item size="1" class="slds-is-relative">
-                <svg width="48px" height="48px" viewBox="0 0 48 48" class="centerCircle">
-                    <circle cx="24" cy="24" r="24" fill="#f7f7f7"></circle>
+            <div class="slds-is-relative slds-size_2-of-12 slds-small-size_1-of-12">
+                <svg viewBox="0 0 100 100" class="centerCircle">
+                    <path
+                        d="M50 50 50 50"
+                        stroke-linecap="round"
+                        stroke-width="55"
+                        stroke="#f7f7f7"
+                        fill="none"
+                        vector-effects="non-scaling-stroke"
+                    ></path>
                 </svg>
                 <img
                     class="iconcolor slds-is-relative slds-show"
                     src={dialog}
                     alt={unreadmessage}
                     id="b"
-                    style="margin: auto"
+                    style="margin: auto; width: 24px"
                 />
-            </lightning-layout-item>
-            <lightning-layout-item size="10">
+            </div>
+            <div class="slds-size_9-of-12 slds-small-size_10-of-12">
                 <p class="typo-normal blokk-xxxs">
                     <lightning-formatted-date-time
                         value={thread.latestMessageDate}
@@ -27,7 +34,7 @@
                 </p>
                 <h3 class="typo-undertittel lenkepanel__heading">{itemTitle}</h3>
                 <p class="typo-normal tema-avsnitt messagebox">{latestText}</p>
-            </lightning-layout-item>
+            </div>
             <lightning-layout-item size="1">
                 <span class="nav-frontend-chevron chevronboks chevron chevron--hoyre lenkepanel__indikator"></span>
             </lightning-layout-item>
