--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -4,16 +4,7 @@
             <div
                 class="slds-is-relative slds-size_2-of-12 slds-small-size_2-of-12 slds-medium-size_2-of-12 slds-large-size_1-of-12"
             >
-                <svg viewBox="0 0 100 100" class="centerCircle">
-                    <path
-                        d="M50 50 50 50"
-                        stroke-linecap="round"
-                        stroke-width="90"
-                        stroke="#F1F1F1"
-                        fill="none"
-                        vector-effects="non-scaling-stroke"
-                    ></path>
-                </svg>
+                <diV class="centerCircle"></diV>
                 <img
                     class="iconcolor slds-is-relative slds-show"
                     src={dialog}
